# opentelemetry-python-exporter-instana

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MAINTAINERS.md  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
src/opentelemetry/exporter/instana/: __init__.py  exporter.py  version.py
tests/: requirements.txt  test_instana_exporter.py
