# (c) Copyright IBM Corp. 2022

[metadata]
name = opentelemetry-exporter-instana
description = Instana Span Exporter for OpenTelemetry
long_description = file: README.rst
long_description_content_type = text/x-rst
author = IBM Corp.
author_email = eng-python@instana.com
url = https://github.com/instana/opentelemetry-python-exporter-instana
platforms = any
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
